Creada la base beta

--- a/interfaz.ui
+++ b/interfaz.ui
@@ -11,11 +11,106 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>interfaz</string>
+   <string>Simulador</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>10</y>
+      <width>741</width>
+      <height>551</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(7, 7, 7);</string>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="verticalSlider">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>16</width>
+      <height>160</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 15pt &quot;Bebas Neue&quot;;</string>
+    </property>
+    <property name="text">
+     <string>ZOOM</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_fast">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>570</y>
+      <width>84</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Bebas Neue&quot;;</string>
+    </property>
+    <property name="text">
+     <string>FAST</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_normal">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>570</y>
+      <width>84</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Bebas Neue&quot;;</string>
+    </property>
+    <property name="text">
+     <string>NORMAL</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_slow">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>570</y>
+      <width>84</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Bebas Neue&quot;;</string>
+    </property>
+    <property name="text">
+     <string>SLOW</string>
+    </property>
+   </widget>
+  </widget>
  </widget>
  <resources/>
  <connections/>
