--- a/interfaz.ui
+++ b/interfaz.ui
@@ -42,6 +42,21 @@
       <height>160</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>2</number>
+    </property>
+    <property name="singleStep">
+     <number>1</number>
+    </property>
+    <property name="pageStep">
+     <number>1</number>
+    </property>
+    <property name="value">
+     <number>1</number>
+    </property>
+    <property name="tracking">
+     <bool>true</bool>
+    </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
